cabal-version:      2.4
name:               scheme
version:            0.1.0.0
author:             Yeri
maintainer:         arifyeripratama@gmail.com
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:  Scheme.Current
    other-modules:    Scheme.IO
    build-depends:    base ^>=4.16.4.0, mtl, parsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable scheme
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, scheme
    hs-source-dirs:   app
    default-language: Haskell2010
