cabal-version:      2.4
name:               scheme
version:            0.1.0.0
author:             Yeri
maintainer:         arifyeripratama@gmail.com
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:  Scheme.Current
                       Scheme.IO
    build-depends:    base, mtl, parsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable scheme
    main-is:          Main.hs
    build-depends:    base, scheme
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite spec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base, hspec, scheme
    default-language: Haskell2010
